--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
+			</plugin>
 		</plugins>
+		
+		    
 	</build>
 
 
@@ -47,5 +56,11 @@
 		<module>pet-clinic-data</module>
 		<module>pet-clinic-web</module>
 	</modules>
+
+	<scm>
+      <developerConnection>scm:git:git@github.com:LorenzoAlvarez/spring-pet-clinic.git</developerConnection>
+      <tag>HEAD</tag>
+  	</scm>
+	
 
 </project>
